👌(section) fix alignment for category glimpses in section tiles
Vertical alignment was not really correct for content in category
glimpses in section tiles.

This commit just fix this behavior in Section Sass source so content
is aligned to the top.

--- a/src/frontend/scss/components/templates/richie/section/_section.scss
+++ b/src/frontend/scss/components/templates/richie/section/_section.scss
@@ -135,6 +135,9 @@ section {
     border: 0;
 
     &__logo {
+      flex-grow: 0;
+      justify-content: flex-start;
+
       img {
         max-width: 3.75rem;
         margin: 0 auto;
